--- a/style.css
+++ b/style.css
@@ -11,7 +11,19 @@ body {
     height: 110px;
 
 }
+
+#front-page-profile {
+    margin-top: 2%;
+    margin-left: 15px;
+    width:40%;
+    height:60%;
+    box-shadow: 0px 0px 20px 20px #333333;
+    opacity:.6;
+    border-radius: 40px;
+    
+}
 .FrontPageName {
+    float: right;
     width: 50%;
     height: 99%;
 }
