--- a/style.css
+++ b/style.css
@@ -11,21 +11,19 @@ body {
     height: 110px;
 
 }
-
 #front-page-profile {
-    margin-top: 2%;
+    margin-top: 5%;
     margin-left: 15px;
-    width:40%;
-    height:60%;
-    box-shadow: 0px 0px 20px 20px #333333;
+    width:30%;
+    height:50%;
     opacity:.6;
     border-radius: 40px;
     
 }
 .FrontPageName {
-    float: right;
-    width: 50%;
-    height: 99%;
+    float: left;
+    width: 30%;
+    height: 69%;
 }
 img {
     width: 100%;
