--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 }
 #front-page-profile {
+    float: left;
     margin-top: 5%;
     margin-left: 15px;
     width:30%;
@@ -21,7 +22,7 @@ body {
     
 }
 .FrontPageName {
-    float: left;
+    float: right;
     width: 30%;
     height: 69%;
 }
@@ -30,3 +31,8 @@ img {
     height: 100%;
   }
 
+#nelly-richae-vid{
+    width: 500px;
+    height: 500px;
+    opacity: .6
+}
