--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ img {
     opacity: .5;
     /* Add the blur effect */
 }
+
+#athlete-vid{
+    position: relative;
+    float: right;
+    top: 100px;
+    right: -20px;
+    width: 30%;
+    height: 45%;
+}
