--- a/style.css
+++ b/style.css
@@ -41,12 +41,150 @@ img {
     opacity: .5;
     /* Add the blur effect */
 }
+.athlete-container{
+    display: flex;
+}
+.header1-container{
+    display:inline-block;
+    align-items: center;
+    flex: 2;
+}
+.header2-container{
+    display:inline-block;
+    align-items: center;
+    flex: 3;
+}
+
+#athlete-page-title {
+    color: white;
+    text-align: center;
+    opacity: 0;
+}
 
 #athlete-vid{
-    position: relative;
-    float: right;
-    top: 100px;
-    right: -20px;
-    width: 30%;
+    flex: 1;
+    width: 25%;
     height: 45%;
+    opacity: .8;
+}
+#athlete-page-header1{
+    color: white;
+    margin-left: 50px;
+    font-size: 15px;
+    font-family: 'Courier New', Courier, monospace;
+}
+#athlete-page-header2{
+    color: white;
+    margin-left: 50px;
+    font-size: 15px;
+    font-family: 'Courier New', Courier, monospace;
+}
+#athlete-page-p1 {
+    color: white;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+#athlete-page-p2 {
+    color: white;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+#athlete-page-upside-down {
+    position: relative;
+    top: -65%;
+    left: 30%;
+    margin-left: 60px;
+    margin-right: 7px;
+    width: 60%;
+    height: 40%;
+}
+#athlete-page-kayak {
+    transition: 1s;
+    margin-left: 10px;
+    margin-right: 7px;
+    width: 90%;
+    height: 40%;
+    opacity: .2;
+}
+#athlete-page-dive {
+    transition: 1s;
+    margin-left: 10px;
+    margin-right: 7px;
+    width: 90%;
+    height: 27%;
+    opacity: .2;
+}
+#athlete-page-running {
+    transition: 1s;
+
+    margin-left: 10px;
+    margin-right: 7px;
+    width: 90%;
+    height: 35%;
+    opacity: .2;
+}
+#background-box {
+    position: relative;
+    width: 20%;
+    height: 15%;
+    border-width: 0px;
+    border-radius: 10px;
+    margin-left: 10px;
+    transition: 1s;
+    background-color: #E30B5C;
+}
+
+#rotate-background-box-text {
+    position: relative;
+    top: 30%;
+    text-align: center;
+
+}
+#background-box-text {
+   font-family: Chalkduster, fantasy;
+   font-variant: small-caps;
+   color: white;
+   text-shadow: 2.5px 2.5px black;
+   font-weight: 800;
+}
+
+
+
+#current-box {
+    transition: 1s;
+    position: relative;
+    width: 20%;
+    height: 30%;
+    margin-top: 10px;
+    border-width: 0px;
+    border-radius: 10px;
+    margin-left: 10px;
+    background-color: #75E6DA;
+}
+
+#rotate-current-box-text {
+    position: relative;
+    top: 40%;
+    text-align: center;
+    transform: rotate(90deg);
+
+}
+#current-box-text {
+   font-family: Chalkduster, fantasy;
+   font-variant: small-caps;
+   color: white;
+   text-shadow: 2.5px 2.5px black;
+   font-weight: 800;
+}
+
+#plans-box {
+    transition: 1s;
+    position: relative;
+    width: 20%;
+    height: 15%;
+    margin-top: 10px;
+    border-width: 0px;
+    border-radius: 10px;
+    margin-left: 10px;
+    background-color: #F1EB9C;
 }
