--- a/style.css
+++ b/style.css
@@ -54,17 +54,22 @@ img {
     align-items: center;
     flex: 3;
 }
+.athlete-vid-container {
+    display:inline-block;
+    align-items: center;
+    flex: 3;
+}
 
 #athlete-page-title {
+    flex: 1;
     color: white;
     text-align: center;
     opacity: 0;
 }
 
 #athlete-vid{
-    flex: 1;
-    width: 25%;
-    height: 45%;
+    width: 95%;
+    height: 81%;
     opacity: .8;
 }
 #athlete-page-header1{
@@ -91,74 +96,94 @@ img {
 }
 #athlete-page-upside-down {
     position: relative;
+    transition: 1s;
     top: -65%;
     left: 30%;
     margin-left: 60px;
     margin-right: 7px;
-    width: 60%;
+    width: 55%;
     height: 40%;
 }
 #athlete-page-kayak {
+    position: relative;
+    left: 15%;
     transition: 1s;
-    margin-left: 10px;
     margin-right: 7px;
     width: 90%;
-    height: 40%;
+    height: 30%;
     opacity: .2;
 }
 #athlete-page-dive {
+    position: relative;
+    left: 12%;
     transition: 1s;
     margin-left: 10px;
     margin-right: 7px;
     width: 90%;
-    height: 27%;
+    height: 20%;
     opacity: .2;
 }
 #athlete-page-running {
+    position: relative;
+    left: 12%;
     transition: 1s;
-
     margin-left: 10px;
     margin-right: 7px;
     width: 90%;
-    height: 35%;
+    height: 30%;
     opacity: .2;
+}
+
+#athlete-page-quote1 {
+    position: relative;
+    width: 95%;
+    height: 5%;
+    border-width: 0px;
+    border-radius: 10px;
+    transition: 1s;
+    background-color: black;
+}
+
+
+#rotate-background-box-text {
+    position: relative;
+    text-align: center;
+}
+.ml3 {
+    text-align: center;
+    color: black;
+    letter-spacing: 12px;
+    font-weight: 900;
+    font-size: 3.5em;
+}
+ 
+
+#background-box-text {
+   font-family: Chalkduster, fantasy;
+   font-variant: small-caps;
+   font-size: 10px;
+   color: black;
 }
 #background-box {
     position: relative;
     width: 20%;
-    height: 15%;
+    left: -10%;
+    height: 20%;
     border-width: 0px;
     border-radius: 10px;
-    margin-left: 10px;
     transition: 1s;
     background-color: #E30B5C;
 }
-
-#rotate-background-box-text {
-    position: relative;
-    top: 30%;
-    text-align: center;
-
-}
-#background-box-text {
-   font-family: Chalkduster, fantasy;
-   font-variant: small-caps;
-   color: white;
-   text-shadow: 2.5px 2.5px black;
-   font-weight: 800;
-}
-
-
 
 #current-box {
     transition: 1s;
     position: relative;
     width: 20%;
-    height: 30%;
+    left: -10%;
+    height: 40%;
     margin-top: 10px;
     border-width: 0px;
     border-radius: 10px;
-    margin-left: 10px;
     background-color: #75E6DA;
 }
 
@@ -180,11 +205,27 @@ img {
 #plans-box {
     transition: 1s;
     position: relative;
-    width: 20%;
-    height: 15%;
+    left: -10%;
     margin-top: 10px;
+    width: 20%;
+    height: 18%;
     border-width: 0px;
     border-radius: 10px;
-    margin-left: 10px;
     background-color: #F1EB9C;
+}
+#athlete-page-live-active {
+    position: relative;
+    top: -40%;
+    width: 95%;
+    height: 50%;
+}
+
+.athlete-page-header {
+    position: relative;
+    top: 20%;
+    left: -10%;
+    background-color: white;
+    width: 130%;
+    height: 140px;
+    margin-bottom: 10px;
 }
