--- a/style.css
+++ b/style.css
@@ -59,12 +59,7 @@ img {
     align-items: center;
     flex: 3;
 }
-.athlete-page-img {
-    background-image: url("./Background3.jpg");
-    height: 70%;
-    width: 100%;
-    opacity: 1;
-}
+
 #athlete-page-title {
     flex: 1;
     text-align: center;
@@ -72,6 +67,8 @@ img {
 }
 
 #athlete-vid{
+    position: relative;
+    top: 20%;
     width: 95%;
     height: 81%;
     opacity: .8;
@@ -115,7 +112,8 @@ img {
     margin-right: 7px;
     width: 90%;
     height: 30%;
-    opacity: .2;
+    opacity: .4;
+    border-radius: 10px;
 }
 #athlete-page-dive {
     position: relative;
@@ -125,7 +123,9 @@ img {
     margin-right: 7px;
     width: 90%;
     height: 20%;
-    opacity: .2;
+    opacity: .4;
+    border-radius: 10px;
+
 }
 #athlete-page-running {
     position: relative;
@@ -135,7 +135,9 @@ img {
     margin-right: 7px;
     width: 90%;
     height: 30%;
-    opacity: .2;
+    opacity: .4;
+    border-radius: 10px;
+
 }
 
 #athlete-page-quote1 {
@@ -155,7 +157,7 @@ img {
 }
 .ml3 {
     text-align: center;
-    color: white;
+    color: black;
     letter-spacing: 12px;
     font-weight: 900;
     font-size: 3.5em;
@@ -170,6 +172,7 @@ img {
 }
 #background-box {
     position: relative;
+    top: 20%;
     width: 20%;
     left: -10%;
     height: 20%;
@@ -182,6 +185,7 @@ img {
 #current-box {
     transition: 1s;
     position: relative;
+    top: 20%;
     width: 20%;
     left: -10%;
     height: 40%;
@@ -209,6 +213,7 @@ img {
 #plans-box {
     transition: 1s;
     position: relative;
+    top: 20%;
     left: -10%;
     margin-top: 10px;
     width: 20%;
@@ -226,9 +231,7 @@ img {
 
 .athlete-page-header {
     position: relative;
-    top: 20%;
     left: -10%;
     width: 130%;
     height: 140px;
-    margin-bottom: 10px;
 }
