--- a/style.css
+++ b/style.css
@@ -67,8 +67,6 @@ img {
 }
 
 #athlete-vid{
-    position: relative;
-    top: 20%;
     width: 95%;
     height: 81%;
     opacity: .8;
@@ -106,6 +104,7 @@ img {
     height: 40%;
 }
 #athlete-page-kayak {
+    border-radius: 10px;
     position: relative;
     left: 15%;
     transition: 1s;
@@ -113,9 +112,9 @@ img {
     width: 90%;
     height: 30%;
     opacity: .4;
-    border-radius: 10px;
 }
 #athlete-page-dive {
+    border-radius: 10px;
     position: relative;
     left: 12%;
     transition: 1s;
@@ -124,10 +123,9 @@ img {
     width: 90%;
     height: 20%;
     opacity: .4;
-    border-radius: 10px;
-
 }
 #athlete-page-running {
+    border-radius: 10px;
     position: relative;
     left: 12%;
     transition: 1s;
@@ -136,8 +134,6 @@ img {
     width: 90%;
     height: 30%;
     opacity: .4;
-    border-radius: 10px;
-
 }
 
 #athlete-page-quote1 {
@@ -172,7 +168,6 @@ img {
 }
 #background-box {
     position: relative;
-    top: 20%;
     width: 20%;
     left: -10%;
     height: 20%;
@@ -185,7 +180,6 @@ img {
 #current-box {
     transition: 1s;
     position: relative;
-    top: 20%;
     width: 20%;
     left: -10%;
     height: 40%;
@@ -213,7 +207,6 @@ img {
 #plans-box {
     transition: 1s;
     position: relative;
-    top: 20%;
     left: -10%;
     margin-top: 10px;
     width: 20%;
@@ -234,4 +227,8 @@ img {
     left: -10%;
     width: 130%;
     height: 140px;
+}
+
+.athlete-page-img {
+    background-color: #1c4966;
 }
