--- a/style.css
+++ b/style.css
@@ -1,46 +1,98 @@
+@import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2Pt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatlichest&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 body {
-    background-color: black
-}
-#logo-in-black {
-    position: absolute;
-    float: right;
-    right: 15px;
-    bottom: 15px;
-    width: 110px;
-    height: 110px;
-
-}
-#front-page-profile {
-    float: left;
-    margin-top: 5%;
-    margin-left: 15px;
-    width:20%;
-    height:45%;
-    opacity:.6;
-    border-radius: 40px;
+    background-color: black;
+    min-height: 100vh;
+    width: 100%;
     
 }
-.FrontPageName {
-    float: right;
-    width: 40%;
-    height: 60%;
-    margin-right: 60px;
+#main-page-contents{
+    height: 100%;
 }
+.main-page {
+    display: flex;
+}
+#front-page-options {
+    flex: 2;
+
+}
+.FrontPageName {
+    position: relative;
+    flex: 1;
+    width: 65%;
+    height: 50%;
+    margin-left: 60px;
+
+}
+#front-page-buttons {
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    height: 50%;
+}
+
+#front-page-button {
+    background-color: black;
+    border-width: 0px;
+    position: relative;
+    top: 10%;
+    display: inline-block;
+    width: 60%;
+    height: fit-content;
+    font-family: 'Staatliches';
+    font-size: 2.8vw;
+    font-weight: 900;
+    text-shadow: -1px 0 white, 0 .5px white, 1px 0 white, 0 -1px black;
+    letter-spacing: 3px;
+    }
+/*SPECIFIC BUTTON STYLING*/
+.SWE-button{
+   color: #F01D7F;
+   width: 100px;
+   
+}
+.Artist-button{
+    color: #FDDA0D	;
+ }
+ .Athlete-button {
+     
+     color: aquamarine;
+ }
+ .Extrovert-button {
+    color: #1F51FF;
+ }
 img {
     width: 100%;
     height: 100%;
-  }
+}
 
 #nelly-richae-vid{
     position: relative;
-    top: -100px;
-    left: -20px;
-    width: 45%;
-    height: 75%;
-    opacity: .5;
+    width: 40%;
+    height: 70%;
+    opacity: 1;
     /* Add the blur effect */
 }
+#main-page-bottom{
+    background-color:#E30B5C;
+    width: 100%;
+    height:400px;
+    padding-top: 0px;
+    padding-bottom:0px;
+}
+
+/*END OF MAIN PAGE STYLING*/
+
+
+
+
+
+
+
 .athlete-container{
     display: flex;
 }
@@ -67,8 +119,10 @@ img {
 }
 
 #athlete-vid{
-    width: 95%;
-    height: 81%;
+    position: relative;
+    margin-top: 5px;
+    width: 30%;
+    height: 20%;
     opacity: .8;
 }
 #athlete-page-header1{
@@ -103,16 +157,17 @@ img {
     width: 55%;
     height: 40%;
 }
-#athlete-page-kayak {
-    border-radius: 10px;
-    position: relative;
-    left: 15%;
-    transition: 1s;
-    margin-right: 7px;
-    width: 90%;
-    height: 30%;
-    opacity: .4;
+
+.athlete-page-content {
+    display: inline-block;
 }
+#athlete-page-kayak {
+    width: 100%;
+    height: 40%;
+    border-bottom-width: 10px;
+    border-bottom-color: white;
+}
+
 #athlete-page-dive {
     border-radius: 10px;
     position: relative;
@@ -217,7 +272,7 @@ img {
 }
 #athlete-page-live-active {
     position: relative;
-    top: -40%;
+    top: -120%;
     width: 95%;
     height: 50%;
 }
@@ -227,8 +282,4 @@ img {
     left: -10%;
     width: 130%;
     height: 140px;
-}
-
-.athlete-page-img {
-    background-color: #1c4966;
 }
