--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     flex: 2;
 
 }
+
 .FrontPageName {
     position: relative;
     flex: 1;
@@ -28,42 +29,70 @@ body {
     margin-left: 60px;
 
 }
+#front-page-name {
+    transition: 1s;
+}
 #front-page-buttons {
-    width: 50%;
-    margin: 0 auto;
+    position: relative;
+    top: 5%;
     margin-bottom: 10px;
     height: 50%;
 }
 
 #front-page-button {
-    background-color: black;
-    border-width: 0px;
+    border-radius: 120px;
+    border-width: 10px;
     position: relative;
+    left: 10%;
     top: 10%;
-    display: inline-block;
-    width: 60%;
-    height: fit-content;
+    display: inline-flex;
+    margin-left: 10px;
+    width: 12%;
+    height: 30%;
     font-family: 'Staatliches';
-    font-size: 2.8vw;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 3vw;
+    margin-left: 10px;
+    margin-right: 10px;
     font-weight: 900;
-    text-shadow: -1px 0 white, 0 .5px white, 1px 0 white, 0 -1px black;
-    letter-spacing: 3px;
+    /*letter-spacing: 3px;*/
+    transition: .4s;
+    cursor: pointer;
     }
 /*SPECIFIC BUTTON STYLING*/
 .SWE-button{
-   color: #F01D7F;
-   width: 100px;
+   border-color: #F01D7F;
+   background-color: black;
+   text-shadow: -1px 0 #F01D7F, 0 .5px #F01D7F, 1px 0 #F01D7F, 0 -1px black;
+   opacity: 1;
+   color: black;
    
 }
+
 .Artist-button{
-    color: #FDDA0D	;
+    border-color: #FDDA0D;
+    background-color: black;
+    text-shadow: -1px 0 #FDDA0D, 0 .5px #FDDA0D, 1px 0 #FDDA0D, 0 -1px black;
+    opacity: 1;
+    color: black;
+
  }
  .Athlete-button {
      
-     color: aquamarine;
+    border-color: aquamarine;
+    background-color: black;
+    text-shadow: -1px 0 aquamarine, 0 .5px aquamarine, 1px 0 aquamarine, 0 -1px black;
+    opacity: 1;
+    color: black;
  }
  .Extrovert-button {
-    color: #1F51FF;
+    border-color: #0096FF;
+    background-color: black;
+    text-shadow: -1px 0 #0096FF, 0 .5px #0096FF, 1px 0 #0096FF, 0 -1px black;
+    opacity: 1;
+    color: black;
  }
 img {
     width: 100%;
